# Safe-Reinforcement-Learning-Project

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: safe_cpo.yaml  safe_lagrangian.yaml  safe_qlearning.yaml
demo/: app.py
scripts/: evaluate.py  modern_safe_rl.py  train.py
src/: __init__.py
src/algorithms/: __init__.py
src/environments/: __init__.py
src/evaluation/: __init__.py
src/policies/: __init__.py
src/utils/: __init__.py
tests/: test_safe_rl.py
